Tests/RunCMake/NinjaMultiConfig/SimpleNoCross-relwithdebinfo-in-release-graph-all-build-stderr.txt
^ninja: error: 'RelWithDebInfo/[^
]*simplestatic[^
]*', needed by 'all:RelWithDebInfo', missing and no known rule to make it$
